Use LayoutUnit::Epsilon as the precision of media query lengths

After zooming, the calculated length of a value can sometimes be less
than or equal to a LayoutUnit away from the true value. Because of this,
a page can sometimes be in between two precise values of a media query. Use
LayoutUnit::Epsilon to avoid this issue.

Bug: 689096
Change-Id: Ibce686fb10e2dd0eaca142fadd65331ebe7b35a1
Reviewed-on: https://chromium-review.googlesource.com/879235
Reviewed-by: Emil A Eklund <eae@chromium.org>
Commit-Queue: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531296}
Former-commit-id: 6208e4e123e2fd293bf9fd221aaa136c34a5f4e9